--- a/client/src/component/Project/Project.module.css
+++ b/client/src/component/Project/Project.module.css
@@ -1,3 +1,7 @@
+.container {
+  width: 100%;
+  /* height: 100vh; */
+}
 .header {
   display: flex;
   align-items: center;
@@ -10,6 +14,9 @@
   align-items: center;
   margin-right: 144px;
   gap: 2px;
+  width: 54px;
+  height: 54px;
+  cursor: pointer;
 }
 .mainImg {
   width: 442.5px;
@@ -35,6 +42,7 @@
   line-height: 26.94px;
   letter-spacing: 0%;
   text-align: center;
+  color: #838383;
 }
 .details {
   width: 1113.97px;
@@ -51,11 +59,76 @@
   align-items: center;
   justify-content: space-evenly;
   font-weight: 600;
-  font-size: 28.41px;
+  font-size: 28px;
   line-height: 33.3px;
   letter-spacing: 0%;
   border-radius: 7.89px;
   border: transparent;
   background: #211935;
   color: #f8f8f8;
+  cursor: pointer;
+}
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 1000;
+}
+.modalContent {
+  border-radius: 33px;
+  background: white;
+  padding: 20px;
+  width: 1318px;
+  height: 459px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+justify-content: center;
+}
+.modalContent input {
+  width: 90%;
+  height: 70%;
+  padding: 10px;
+  margin-top: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.modalContent button {
+  margin: 10px;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+ margin-top: 50px;
+ 
+}
+.modalContent button:first-child {
+  color: red;
+  margin-left: 1020px;
+}
+
+.modalContent button:last-child {
+  background: #6a1b9a;
+  color: white;
+}
+
+.modalContent h1{
+  font-size: 40px;
+  text-align: start;
+  margin-left: 50px;
+}
+.modalContent label{
+  display: flex;
+  margin-left: 52px;
+  font-size: 20px;
+  margin-top: -10px;
 }
