--- a/client/src/component/Upload/Upload.module.css
+++ b/client/src/component/Upload/Upload.module.css
@@ -4,14 +4,83 @@
 }
 .left {
   width: 442.65px;
-  /* height: 1068px; */
-  gap: 42.67px;
-  padding: 53.33px;
+  gap: 50px;
+  padding: 55px;
+}
+.leftContent{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-around;
+    gap: 30px;
+}
+.leftData{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+}
+.leftHelp{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 430px;
+}
+.leftIcon{
+    width: 187px;
+height:40px;
+}
+.leftIconsData{
+    width: 16px;
+height: 16px;
+}
+.leftImageDiv{
+    margin-bottom: 30px;
+}
+.leftDownDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: end;
+}
+.hrline{
+    width: 100%;
+    /* height: 2px; */
+}
+.headingHome{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: -30px;
+}
+.arrow{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.groupIcon{
+    display: flex;
+    gap: 20px;
+    /* width:50px;
+    height:50px;
+    padding: 2px; */
+}
+.notification{
+    border-radius: 50%;
+    /* border: 1px solid #CCCCCC; */
+    width: 27px;
+    height: 27px;
 }
 .right {
   font-family: Roboto;
   background: #f1f0f0;
-  padding: 20px;
+  padding: 55px;
+  margin-top: -20px;
+}
+.settingContainer{
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
 .addPodcast {
@@ -19,6 +88,7 @@
   font-size: 44.98px;
   line-height: 64.25px;
   color: #1d1929;
+
 }
 .dataMap {
   display: flex;
@@ -34,7 +104,7 @@
   width: 418.65px;
   height: 202.65px;
   border-width: 0.68px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .icons {
   width: 86.66px;
@@ -201,5 +271,25 @@ margin-bottom: 5px;
     width: 40px;
 height: 40px;
 cursor: pointer;
+}
+.homeIcon{
+    width: 24px;
+height: 24px;
+}
+.headingHomeSample{
+    font-family: Roboto;
+font-weight: 700;
+font-size: 25.7px;
+line-height: 36.72px;
+letter-spacing: 0.18px;
+color: #999999;
+}
+.headingHomeSpan{
+    font-family: Roboto;
+font-weight: 700;
+font-size: 25.7px;
+line-height: 36.72px;
+letter-spacing: 0.18px;
+color:  #7E22CE;
 
 }
