--- a/client/src/component/Home/Home.module.css
+++ b/client/src/component/Home/Home.module.css
@@ -112,6 +112,29 @@
   line-height: 26.47px;
   margin-top: -20px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.button:disabled {
+  background: #a7a7a7; /* Gray out button when disabled */
+  cursor: not-allowed;
+}
+
+.loader {
+  width: 25px;
+  height: 25px;
+  border: 3px solid #fff;
+  border-top: 3px solid transparent;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 input::placeholder {
   font-weight: 700;
