logout and upload

--- a/client/src/component/Upload/Upload.module.css
+++ b/client/src/component/Upload/Upload.module.css
@@ -2,6 +2,10 @@
   display: flex;
   height: 100vh;
 }
+.mainContent{
+  display: flex;
+  flex-direction: column;
+}
 .left {
   width: 442.65px;
   gap: 50px;
