--- a/client/src/component/Home/Home.module.css
+++ b/client/src/component/Home/Home.module.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   height: 100vh;
+  
 }
 .left {
   position: relative;
@@ -14,7 +15,7 @@
 .imageContainer {
   position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -53,7 +54,6 @@
   color: #ffffff;
 }
 
-/* right container */
 
 .right {
   display: flex;
@@ -61,14 +61,15 @@
   justify-content: center;
   align-items: center;
   width: 615px;
-  height: 100vh;
+  height: 80vh;
   gap: 25px;
+  margin-top: 30px;
+  padding: 10px;
 }
 .image2 {
   width: 100.37px;
   height: 96.2px;
   border-width: 9.27px;
-  /* margin-top: 10px; */
 }
 .intro {
   font-weight: 300;
@@ -119,7 +120,7 @@
 }
 
 .button:disabled {
-  background: #a7a7a7; /* Gray out button when disabled */
+  background: #a7a7a7; 
   cursor: not-allowed;
 }
 
@@ -203,4 +204,153 @@ letter-spacing: 0%;
   font-size: 18.67px;
   line-height: 20.37px;
   letter-spacing: 0%;
+}
+
+
+
+@media (max-width: 1200px) {
+  
+  .mainContainer {
+    flex-direction: column;
+    height: auto;
+  }
+  .imageContainer {
+    display: none; 
+  }
+  .left, .right {
+    width: 100%;
+    height: auto;
+  }
+
+  .left {
+    max-width: 100%;
+  }
+
+  .imageContainer {
+    height: auto;
+  }
+
+  .data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20px;
+  }
+
+  .details {
+    font-size: 60px;
+    line-height: 68px;
+  }
+
+  .subtitle {
+    font-size: 24px;
+    line-height: 32px;
+  }
+}
+
+/* Mobile devices */
+@media (max-width: 768px) {
+  .mainContainer {
+    width: 100%;
+    flex-direction: column;
+    height: auto;
+  }
+  .imageContainer {
+    display: none; 
+  }
+ 
+  .left, .right {
+    width: 100%;
+    height: auto;
+  }
+
+  .left {
+    max-width: 100%;
+  }
+
+  .imageContainer {
+    height: auto;
+  }
+
+  .data {
+    margin-left: 10px;
+  }
+
+  .logo {
+    width: 200px;
+    height: auto;
+  }
+
+  .details {
+    font-size: 40px;
+    line-height: 48px;
+  }
+
+  .subtitle {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .right {
+    padding: 20px;
+  }
+
+  .image2 {
+    width: 80px;
+    height: auto;
+  }
+
+  .intro {
+    font-size: 32px;
+    line-height: 36px;
+  }
+
+  .inputTag, .button, .googleDiv {
+    width: 100%;
+    max-width: 400px;
+  }
+
+  .inputCheckboxDiv {
+    display: none;
+    margin-bottom: 10px;
+  }
+
+  .forgot {
+    margin-top: 10px;
+  }
+
+  .formData {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+  }
+  .button{
+    margin-top: 10px;
+  }
+  
+}
+
+/* Extra small devices */
+@media (max-width: 480px) {
+  .details {
+    font-size: 32px;
+    line-height: 38px;
+  }
+  .imageContainer {
+    display: none; 
+  }
+  .subtitle {
+    font-size: 16px;
+    line-height: 22px;
+  }
+
+  .intro {
+    font-size: 28px;
+    line-height: 32px;
+  }
+
+  .inputTag, .button, .googleDiv {
+    max-width: 350px;
+  }
 }
