--- a/client/src/component/Project/Project.module.css
+++ b/client/src/component/Project/Project.module.css
@@ -97,8 +97,8 @@
   border-radius: 33px;
   background: white;
   padding: 20px;
-  width: 600px;
-  height: 300px;
+  width: 1300px;
+  height: 460px;
   border-radius: 10px;
   text-align: center;
   display: flex;
@@ -237,9 +237,14 @@
 }
 
 .projectsSection {
+  width: 1113.97px;
+  height: 623.94px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: start;
+  margin: auto;
+  cursor: pointer;
 }
 
 .projectsHeader {
@@ -247,21 +252,24 @@
   justify-content: space-between;
   width: 100%;
   margin-bottom: 20px;
+ 
+  align-items: center;
 }
 
 .projectsHeader h1 {
-  font-size: 40px;
+  font-size: 48px;
   color: #7e22ce;
+  display: flex;
 }
 
 .projectsHeader button {
-  width: 200px;
-  height: 50px;
+  width: 376px;
+  height: 72px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 30px;
   line-height: 21.3px;
   letter-spacing: 0%;
   border-radius: 7.89px;
@@ -269,4 +277,239 @@
   background: #211935;
   color: #f8f8f8;
   cursor: pointer;
+}
+/* Existing styles remain unchanged */
+
+/* Media Queries for Responsiveness */
+
+/* Tablets and larger devices */
+@media (max-width: 1200px) {
+  .container {
+    padding: 10px;
+  }
+
+  .header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .icons {
+    margin-right: 0;
+    margin-top: 10px;
+  }
+
+  .details, .projectsSection {
+    width: 90%;
+    margin: 20px auto;
+  }
+
+  .mainImg {
+    width: 100%;
+    height: auto;
+  }
+
+  .buttonTag {
+    width: 100%;
+    height: 60px;
+    font-size: 24px;
+  }
+
+  .modalContent {
+    width: 90%;
+    height: auto;
+    padding: 30px;
+  }
+
+  .modalContent input {
+    width: 80%;
+  }
+
+  .modalContent button {
+    width: 45%;
+  }
+}
+
+/* Mobile devices */
+@media (max-width: 768px) {
+  .container {
+    padding: 5px;
+    width: 100%;
+  }
+
+  .header {
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .icons {
+    margin-right: 0;
+    margin-top: 10px;
+  }
+
+  .details, .projectsSection {
+    width: 95%;
+    margin: 10px auto;
+  }
+
+  .mainImg {
+    width: 100%;
+    height: auto;
+  }
+  .heading{
+    font-size: 40px;
+  }
+
+  .buttonTag {
+    width: 50%;
+    height: 100px;
+    font-size: 20px;
+  }
+
+  .modalOverlay {
+    padding: 10px;
+  }
+
+  .modalContent {
+    width: 95%;
+    height: auto;
+    padding: 20px;
+  }
+
+  .modalContent input {
+    width: 80%;
+  }
+
+  .modalContent button {
+    width: 45%;
+    font-size: 16px;
+  }
+
+  .modalContent h1 {
+    font-size: 30px;
+    margin-left: 20px;
+  }
+
+  .modalContent label {
+    margin-left: 20px;
+    font-size: 18px;
+  }
+
+  .buttonDiv {
+    margin-right: 20px;
+  }
+
+  .error, .success {
+    margin-left: 20px;
+  }
+
+  .projectCountCard, .projectCard {
+    margin: 10px;
+  }
+
+  .projectsHeader {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .projectsHeader h1 {
+    font-size: 36px;
+  }
+
+  .projectsHeader button {
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+  }
+}
+
+/* Extra small devices */
+@media (max-width: 480px) {
+  .container {
+    padding: 2px;
+  }
+
+  .header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .icons {
+    margin-right: 0;
+    margin-top: 5px;
+  }
+
+  .details, .projectsSection {
+    width: 98%;
+    margin: 5px auto;
+  }
+
+  .mainImg {
+    width: 100%;
+    height: auto;
+  }
+
+  .buttonTag {
+    width: 100%;
+    height: 45px;
+    font-size: 18px;
+  }
+
+  .modalOverlay {
+    padding: 5px;
+  }
+
+  .modalContent {
+    width: 98%;
+    height: auto;
+    padding: 15px;
+  }
+
+  .modalContent input {
+    width: 80%;
+  }
+
+  .modalContent button {
+    width: 45%;
+    font-size: 14px;
+  }
+
+  .modalContent h1 {
+    font-size: 24px;
+    margin-left: 15px;
+  }
+
+  .modalContent label {
+    margin-left: 15px;
+    font-size: 16px;
+  }
+
+  .buttonDiv {
+    margin-right: 15px;
+  }
+
+  .error, .success {
+    margin-left: 15px;
+  }
+
+  .projectCountCard, .projectCard {
+    margin: 5px;
+  }
+
+  .projectsHeader {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .projectsHeader h1 {
+    font-size: 28px;
+  }
+
+  .projectsHeader button {
+    width: 100%;
+    height: 45px;
+    font-size: 18px;
+  }
 }
