--- a/client/src/component/UploadLeft/UploadLeft.module.css
+++ b/client/src/component/UploadLeft/UploadLeft.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
   } */
 .left {
-  width: 280px;
+  width: 300px;
   height: 87.7%;
   gap: 50px;
   padding: 55px;
@@ -19,6 +19,7 @@
 .leftData {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 20px;
 }
 .leftHelp {
@@ -35,6 +36,7 @@
   width: 26px;
   height: 26px;
   margin-bottom: 10px;
+
 }
 .leftIconsImage {
   width: 26px;
@@ -80,4 +82,65 @@
 }
 .email {
   margin-top: -20px;
+}
+/* Existing styles remain unchanged */
+
+/* Media Queries for Responsiveness */
+
+/* Tablets */
+@media (max-width: 1200px) {
+  .left {
+    width: 220px;
+    /* height: 85%; */
+    /* padding: 30px; */
+    /* gap: 30px; */
+  }
+
+  .leftContent {
+    gap: 20px;
+    margin-top: 20px;
+  }
+
+  .leftData {
+    gap: 15px;
+  }
+
+  .leftHelp {
+    margin-top: 430px;
+  }
+
+  .leftIcon {
+    width: 150px;
+    height: 35px;
+  }
+
+  .leftIconsData, .leftIconsImage {
+    width: 22px;
+    height: 22px;
+  }
+
+  .leftDownDiv {
+    gap: 15px;
+  }
+
+  .settingContainer {
+    gap: 15px;
+  }
+
+  .leftUserDetail {
+    width: 180px;
+    height: auto;
+    margin-top: 20px;
+  }
+
+  .username, .email {
+    margin-top: -10px;
+  }
+}
+
+/* Mobile devices */
+@media (max-width: 768px) {
+  .left {
+    display: none;
+  }
 }
