--- a/client/src/component/UploadRight/UploadRight.module.css
+++ b/client/src/component/UploadRight/UploadRight.module.css
@@ -1,4 +1,5 @@
 .right {
+/* border: 1px solid red; */
   font-family: Roboto;
   background: #f1f0f0;
   padding: 55px;
@@ -40,6 +41,7 @@
   color: #1d1929;
 }
 .dataMap {
+  
   display: flex;
   gap: 20px;
   margin-top: -20px;
@@ -241,4 +243,162 @@
   line-height: 36.72px;
   letter-spacing: 0.18px;
   color: #7e22ce;
+}
+/* Existing styles remain unchanged */
+
+/* Media Queries for Responsiveness */
+
+/* Tablets */
+@media (max-width: 1200px) {
+  .right {
+    padding: 30px;
+  }
+
+  .mainBox {
+    width: 100%;
+  }
+
+  .dataMap {
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .divs {
+    width: 100%;
+    height: 160px;
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .icons{
+    width: 50px;
+    height: 50px;
+  }
+  .details{
+    display: flex;
+  }
+  .heading{
+    font-size: 25px;
+  }
+  .subheading{
+    font-size: 15px;
+  }
+
+  .uploadingData {
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .cloudPhoto {
+    width: 100px;
+    height: 100px;
+  }
+
+  .para1, .para2 {
+    text-align: center;
+  }
+
+  .selectFile {
+    width: 200px;
+    height: 50px;
+    font-size: 22px;
+  }
+
+  .modalContent {
+    width: 90%;
+    padding: 30px;
+  }
+
+  .headerHeading {
+    font-size: 36px;
+  }
+
+  .inputTag, .inputTextarea {
+    height: 50px;
+    font-size: 18px;
+  }
+
+  .uploadButton {
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
+  }
+}
+
+/* Mobile devices */
+@media (max-width: 768px) {
+  .right {
+    padding: 20px;
+  }
+
+  .dataMap {
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+  }
+  
+  .divs {
+    display: flex;
+    width: 90%;
+    height: auto;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
+  .uploadingData {
+    width: 90%;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .cloudPhoto {
+    width: 80px;
+    height: 80px;
+  }
+
+  .para1, .para2 {
+    text-align: center;
+    font-size: 18px;
+  }
+
+  .selectFile {
+    width: 180px;
+    height: 50px;
+    font-size: 18px;
+  }
+
+  .modalContent {
+    width: 95%;
+    padding: 20px;
+  }
+
+  .headerHeading {
+    font-size: 28px;
+  }
+
+  .inputTag, .inputTextarea {
+    height: 40px;
+    font-size: 16px;
+  }
+
+  .uploadButton {
+    width: 130px;
+    height: 40px;
+    font-size: 16px;
+  }
+
+  .groupIcon {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
 }
