--- a/client/src/component/Project/Project.module.css
+++ b/client/src/component/Project/Project.module.css
@@ -1,8 +1,8 @@
-/* Project.module.css */
+
 
 .container {
   width: 100%;
-  /* height: 100vh; */
+
 }
 
 .header {
@@ -108,7 +108,7 @@
 
 .modalContent input {
   width: 90%;
-  height: 40px; /* Adjusted height for better spacing */
+  height: 40px; 
   padding: 10px;
   margin-top: 10px;
   border: 1px solid #ccc;
@@ -122,7 +122,7 @@
   cursor: pointer;
   border-radius: 5px;
   font-size: 16px;
-  margin-top: 20px; /* Added margin for spacing */
+  margin-top: 20px; 
 }
 
 .modalContent button:first-child {
@@ -166,7 +166,7 @@
   text-align: left;
   margin-left: 52px;
 }
-
+/* 
 .loader {
   border: 4px solid #f3f3f3;
   border-top: 4px solid #3498db;
@@ -175,7 +175,7 @@
   height: 20px;
   animation: spin 2s linear infinite;
   margin-left: 10px;
-}
+} */
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
@@ -278,11 +278,7 @@
   color: #f8f8f8;
   cursor: pointer;
 }
-/* Existing styles remain unchanged */
 
-/* Media Queries for Responsiveness */
-
-/* Tablets and larger devices */
 @media (max-width: 1200px) {
   .container {
     padding: 10px;
@@ -329,7 +325,7 @@
   }
 }
 
-/* Mobile devices */
+
 @media (max-width: 768px) {
   .container {
     padding: 5px;
@@ -338,7 +334,6 @@
 
   .header {
     display: flex;
-    /* flex-direction: column; */
     align-items: center;
     justify-content: center;
 
@@ -425,7 +420,6 @@
   }
 }
 
-/* Extra small devices */
 @media (max-width: 480px) {
   .container {
     padding: 2px;
